apps/traefik/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.dev.nexar.com.ar`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
  tls:
    secretName: dev-traefik-tls
